--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    document.addEventListener("adobe_dc_view_sdk.ready", function(){
      var adobeDCView = new AdobeDC.View({clientId: "f786b9a81e65429b8c4bb01454be27ba", divId: "adobe-dc-view", locale:"it-IT", backgroundColor: "#ff6600"});
    adobeDCView.previewFile({
-     content:{location: {url: "http://www.andromedaholding.it/ANDROMEDA_SRL_Company_profile_2022.pdf"}},
+     content:{location: {url: "https://www.andromedaholding.it/ANDROMEDA_SRL_Company_profile_2022.pdf"}},
      metaData:{fileName: "ANDROMEDA SRL - Company profile 2022"}
  }, { embedMode: "IN_LINE", showPrintPDF: false });
  });
