--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 <script type="text/javascript">
    document.addEventListener("adobe_dc_view_sdk.ready", function(){
-     var adobeDCView = new AdobeDC.View({clientId: "f786b9a81e65429b8c4bb01454be27ba", divId: "adobe-dc-view", locale:"it-IT", backgroundColor: "#ff6600"});
+     var adobeDCView = new AdobeDC.View({clientId: "f786b9a81e65429b8c4bb01454be27ba", divId: "adobe-dc-view", locale:"it-IT", backgroundColor: "#000000"});
    adobeDCView.previewFile({
      content:{location: {url: "https://www.andromedaholding.it/ANDROMEDA_SRL_Company_profile_2022.pdf"}},
      metaData:{fileName: "ANDROMEDA SRL - Company profile 2022"}
