--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Andromeda Holding Srl: Start-Up - Consulenza Imprenditoriale - Pianificazione Aziendale - Project Management" />
     <title>Andromeda Holding</title>
   </head>
-<body style="background-color: #000;">
+<body style="background-color: #000; margin:0;">
 <div id="adobe-dc-view"></div>
 <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 <script type="text/javascript">
