update Company Profile PDF

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    document.addEventListener("adobe_dc_view_sdk.ready", function(){
      var adobeDCView = new AdobeDC.View({clientId: "f786b9a81e65429b8c4bb01454be27ba", divId: "adobe-dc-view", locale:"it-IT", backgroundColor: "#000000"});
    adobeDCView.previewFile({
-     content:{location: {url: "https://www.andromedaholding.it/ANDROMEDA_SRL_Company_profile_2022.pdf"}},
-     metaData:{fileName: "ANDROMEDA SRL - Company profile 2022"}
+     content:{location: {url: "https://www.andromedaholding.it/ANDROMEDA_SRL_Company_profile.pdf"}},
+     metaData:{fileName: "ANDROMEDA SRL - Company profile"}
  }, { embedMode: "IN_LINE", showPrintPDF: false });
  });
 </script>
