--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 <body style="background-color: #000; margin:0;">
 <div id="adobe-dc-view"></div>
-<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+<script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
 <script type="text/javascript">
    document.addEventListener("adobe_dc_view_sdk.ready", function(){
      var adobeDCView = new AdobeDC.View({clientId: "f786b9a81e65429b8c4bb01454be27ba", divId: "adobe-dc-view", locale:"it-IT", backgroundColor: "#000000"});
